fix H1 font, top left logo, div layout issue

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -45,10 +45,9 @@ h5 {
 }
 
 .nav-title {
-  @include font-base($font-family-oswald-bold, bold, 500);
+  @include font-base($font-family-barlow, normal, bold);
   color: $white;
-  font-size: 1.5rem; // 24x
-  line-height: 133.1%;
+  font-size: 35px;
   text-align: left;
   @include respond-to(mobile) {
     font-size: 1.125rem; // 18px
@@ -89,6 +88,9 @@ h5 {
   .nav-container__title {
     a {
       text-decoration: none !important;
+      img {
+        height: 61px;
+      }
     }
     @include respond-to(mobile) {
       display: flex;
